--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc",
-    "build:client": "webpack --mode development",
+    "build:client": "webpack --mode production",
     "dev": "nodemon --exec ts-node src/cli.ts start",
     "start": "node dist/cli.js start",
     "test": "jest",
