--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "express": "^4.21.2",
     "figlet": "^1.8.0",
     "node-forge": "^1.3.1",
-    "open": "^10.1.0"
+    "open": "^10.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
