--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc",
     "build:client": "webpack --mode production",
-    "dev": "nodemon --exec ts-node src/cli.ts start",
+    "dev": "nodemon --config nodemon.json --exec ts-node src/cli.ts start",
     "start": "node dist/cli.js start",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
